--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,70 @@
 .intro {
-    background-color: lightcoral;
+    background-color: white;
+    display: flex;
+
+    .left {
+        flex: 0.5;
+        overflow: hidden;
+
+        .imgContainer {
+            width: 636px;
+            height: 636px;
+            background-color: rgb(0, 179, 255);
+            border: 2px solid rgb(0, 0, 0);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            float: right;
+
+            img {
+                height: 100%;
+            }
+        }
+    }
+
+    .right {
+        flex: 0.5;
+        position: relative;
+
+        .wrapper {
+            width: 100%;
+            height: 100%;
+            padding-left: 54px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1 {
+                font-size: 62px;
+                margin: 8px 0;
+            }
+
+            h2 {
+                font-size: 36px;
+            }
+
+            h3 {
+                font-size: 28px;
+                color: rgb(0, 26, 255);
+            }
+        }
+
+        a {
+            position: absolute;
+            bottom: 10px;
+            left: 36%;
+
+            img {
+                width: 32px;
+                animation: arrowBlink 3s infinite;
+            }
+
+            @keyframes arrowBlink {
+                100% {
+                    opacity: 0;
+                }
+            }
+        }
+    }
 }
