--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,6 +1,13 @@
+@import "../../global.scss";
+
 .intro {
     background-color: white;
     display: flex;
+
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+    }
 
     .left {
         flex: 0.5;
@@ -17,8 +24,16 @@
             justify-content: center;
             float: right;
 
+            @include mobile {
+                align-items: flex-start;
+            }
+
             img {
                 height: 100%;
+
+                @include mobile {
+                    height: 50%;
+                }
             }
         }
     }
@@ -35,9 +50,18 @@
             flex-direction: column;
             justify-content: center;
 
+            @include mobile {
+                padding-left: 0;
+                align-items: center;
+            }
+
             h1 {
                 font-size: 62px;
                 margin: 8px 0;
+
+                @include mobile {
+                    font-size: 40px;
+                }
             }
 
             h2 {
@@ -47,6 +71,11 @@
             h3 {
                 font-size: 28px;
                 color: rgb(0, 26, 255);
+                ;
+
+                @include mobile {
+                    font-size: 20px;
+                }
             }
         }
 
