--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -51,10 +51,11 @@
             position: relative;
             transition: all .5s ease;
             cursor: pointer;
+            overflow-y: hidden;
 
             @include mobile {
                 width: 130px;
-                height: 100px;
+                height: 96px;
             }
 
             h3 {
@@ -64,7 +65,7 @@
 
             img {
                 width: 100%;
-                height: 100%;
+                height: 96%;
                 object-fit: cover;
                 z-index: 1;
             }
