--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -41,5 +41,15 @@
                 color: aqua;
             }
         }
+
+        p {
+            a {
+                margin: 12px;
+
+                svg {
+                    fill: white;
+                }
+            }
+        }
     }
 }
