--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -48,6 +48,10 @@
 
                 svg {
                     fill: white;
+
+                    &:hover {
+                        fill: aquamarine;
+                    }
                 }
             }
         }
