--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -45,7 +45,7 @@
                 span {
                     a {
                         text-decoration: none;
-                        color: $mainColor;
+                        color: inherit;
                         font-size: 18px;
                         font-weight: 500;
                     }
